--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -119,7 +119,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Practica1_AMC
-main.class=Clases.main
+main.class=Vistas.MainAppGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
